Extended min height of matchHistoryBlock to prevent big layout shift

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -618,7 +618,7 @@ select:focus {
   align-items: center;
   margin-top: 20px;
   height: auto;
-  min-height: 155px;
+  min-height: 160px;
   width: 1358px;
   padding: 15px;
   gap: 15px;
